[package]
name = "arcast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.1.1"
thiserror = "1.0"
rss = "1.0"
chrono = "0.4.19"
structopt = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"