[package]
name = "arcast"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2.1.1"
thiserror = "1.0"
rss = "1.0"
chrono = "0.4.19"
structopt = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.4"
derive_builder = "0.10.2"
derive-getters = "0.2.0"
lazy_static = "1.4.0"
progressing = "3.0.2"
terminal_size = "0.1.17"
termion = "1.5.6"