[package]
name = "arcast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2"
thiserror = "1"
rss = "2"
chrono = { version = "0.4.19", features = ["serde"] }
structopt = "0.3.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
derive_builder = "0.10.2"
lazy_static = "1"
progressing = "3"
terminal_size = "0.1.17"
termion = "1"
getset = "0.1.2"
